# concurrent-psbt

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  result  result-1  result-2
.github/: dependabot.yml
.github/workflows/: cargo.yml  ci.yml  coverage.yml  flake-update.yml  nextest-darwin.yml  nextest.yml  vulnerability-scan.yml
afl/: Cargo.toml
concurrent-psbt/contrib/design/: payment-negotiation.md
contrib/: scrub-commit-history.sh
contrib/demo/: bitcoin-regtest-sneakernet.md  ptj-demo-sneakernet.sh
contrib/demo-gui/: README.md  index.html  session.html  styles.css  tsconfig.json  tsconfig.model.json
contrib/demo-gui/src/: app.ts  backend.ts  model.ts
contrib/demo-gui/test/: backend.test.mjs  model.test.mjs  session-canvas-layout.test.mjs  (+9 more)
contrib/design/: README.md  app-suite.md  environments.md  pseudo-descriptors.md  ptj-net.md  scenarios.md  security.md  traits.md  transport-plugins.md  transports.md
contrib/ptj-pwa/: README.md  index.html  manifest.webmanifest  package.json  sw.js  tsconfig.json
contrib/tests/: README.md  joinpsbt-gap.sh  ptj-sneakernet.sh  regtest-lib.sh  sneakernet-lattice.sh  webrtc-e2e-fixtures.sh
crates/concurrent-psbt/: Cargo.toml
crates/concurrent-psbt-wasm/: Cargo.toml  README.md  build-wasm.sh
crates/concurrent-psbt-wasm/src/: bytes_arg.rs  dto.rs  lib.rs  negotiation.rs  ops.rs  psbt_io.rs
crates/concurrent-psbt-wasm/src/ops/: bip174_convert.rs  inspect_json.rs
crates/concurrent-psbt-wasm/tests/: wasm.rs
crates/concurrent-psbt/afl/: Cargo.toml
crates/concurrent-psbt/fuzz/: Cargo.toml
crates/concurrent-psbt/fuzz-support/: Cargo.toml
crates/concurrent-psbt/fuzz-support/src/: lib.rs
crates/concurrent-psbt/fuzz/fuzz_targets/: fuzz_crash_test.rs  fuzz_join_inputs.rs  fuzz_join_outputs.rs
crates/concurrent-psbt/hfuzz/: Cargo.toml
crates/concurrent-psbt/proptest-regressions/psbt/tx/: sized_set.txt
crates/concurrent-psbt/src/: graph.rs  lib.rs  readiness.rs  session.rs  values.rs
crates/concurrent-psbt/src/collections/: btreemap.rs  hashmap.rs  mod.rs  option.rs
crates/concurrent-psbt/src/lattice/: join.rs  mod.rs  partial.rs
crates/concurrent-psbt/src/payments/: graph.rs  membership.rs  mod.rs  readiness.rs  session.rs
crates/concurrent-psbt/src/psbt/: fee.rs  global.rs  input.rs  input_set.rs  joinable_struct_macro.rs  mod.rs  negotiation.rs  output.rs  output_set.rs  removal.rs  removal_laws.rs  tx.rs  values.rs
crates/concurrent-psbt/src/psbt/tx/: mod.rs  modifiability_bit.rs  result.rs  sized_set.rs  tx_modifiability_flags.rs  unordered.rs
crates/concurrent-psbt/src/roles/: combiner.rs  creator.rs  mod.rs  sorter.rs
crates/concurrent-psbt/src/roles/constructor/: mod.rs
crates/concurrent-psbt/src/roles/constructor/dynamic/: mod.rs
crates/concurrent-psbt/src/roles/constructor/typed/: both_modifiable.rs  inputs_modifiable.rs  mod.rs  outputs_modifiable.rs
crates/concurrent-psbt/tests/: default_features.rs  session_membership.rs
crates/ptj/: Cargo.toml
crates/ptj-e2e-peer/: Cargo.toml
crates/ptj-e2e-peer/src/: main.rs
crates/ptj-tauri/: Cargo.toml  tauri.conf.json
crates/ptj-tauri/src/: main.rs
crates/ptj/src/: bytes_arg.rs  capabilities.rs  cli.rs  error.rs  io.rs  lib.rs  main.rs  rawmap.rs  tui.rs  webgui.rs
crates/ptj/src/commands/: assign_ids.rs  atomize.rs  classify.rs  concatenate.rs  create.rs  export_bip174.rs  faker.rs  fee.rs  field_edit.rs  import_bip174.rs  inspect.rs  join.rs  lifehash.rs  make_unordered.rs  mod.rs  negotiation.rs  sort.rs  sync.rs
crates/ptj/src/transport/: local.rs  mod.rs  plugin.rs  signaling.rs  watched_dir.rs
crates/ptj/tests/: cli.rs  plugin_host.rs
crates/scrubber/: Cargo.toml
crates/transport-arti/: Cargo.toml
crates/transport-arti/src/: imp.rs  lib.rs
crates/transport-arti/tests/: default_backend.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: channel.rs  error.rs  framing.rs  lib.rs  message.rs  transport.rs
crates/transport-emissary/: Cargo.toml
crates/transport-emissary/src/: lib.rs  net.rs
crates/transport-emissary/tests/: backend_contract.rs
crates/transport-iroh/: Cargo.toml
crates/transport-iroh/src/: backend.rs  lib.rs
crates/transport-mdk/: Cargo.toml
crates/transport-mdk/src/: lib.rs
crates/transport-nym/: Cargo.toml
crates/transport-nym/src/: capnp.rs  imp.rs  lib.rs
crates/transport-nym/tests/: standalone_contract.rs
crates/transport-payjoin-dir/: Cargo.toml
crates/transport-payjoin-dir/src/: imp.rs  lib.rs  mailbox.rs  signaling.rs
crates/transport-plugin-api/: Cargo.toml  build.rs
crates/transport-plugin-api/schema/: transport.capnp
crates/transport-plugin-api/src/: lib.rs
crates/transport-str0m/: Cargo.toml
crates/transport-str0m/src/: imp.rs  lib.rs
crates/transport-webrtc-rs/: Cargo.toml
crates/transport-webrtc-rs/src/: imp.rs  lib.rs
design/: README.md  Tab-prototype.html  Tab.dc.html  tab-prototype.html  tab.dc.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_crash_test.rs  fuzz_join_inputs.rs  fuzz_join_outputs.rs
hfuzz/: Cargo.toml
nix/: apps.nix  checks.nix  devshell.nix  package.nix  ptj.nix  toolchain.nix  treefmt.nix  validate-commits.sh  wasm.nix
nix/apps/: ptj-demo-fixtures.nix  scrub-commit-history.nix  validate-commits.nix
nix/checks/: validate-commits-repository-probes.sh
nix/coverage/: collect.sh  gate.sh  test-gate.sh
nix/pkgs/: cargo-afl.nix  cargo-hfuzz.nix  default.nix
plugins/ptj-transport-nym/: Cargo.toml
plugins/ptj-transport-nym/src/: main.rs  nym.rs
plugins/ptj-transport-nym/tests/: single_backend_contract.rs
src/: constructor.rs  creator.rs  dynamic.rs  fields.rs  global.rs  input.rs  lib.rs  output.rs  psbt_ext.rs  sort.rs  tests.rs  tx.rs  values.rs
src/collections/: btreemap.rs  hashmap.rs  mod.rs  option.rs  result.rs  tuple.rs  vec.rs
src/constructor/: errors.rs  mod.rs  sort_impls.rs
src/lattice/: join.rs  mod.rs  partial.rs  tests.rs
src/psbt/: input.rs  mod.rs  output.rs  psbt_ext.rs  tx.rs
src/sort/: deterministic.rs  explicit.rs  mod.rs  relaxed.rs  sorter.rs  traits.rs
(+53 files in other folders)
