[package]
name = "lattice-psbt"
version = "0.1.0"
edition = "2024"

[features]
_internal = []

[dependencies]
bitcoin = "0.32.2"
thiserror = "2.0.17"
# FIXME no longer need the update-consensus-decode-trait-bound branch
psbt-v2 = { git = "https://github.com/arminsabouri/rust-psbt", branch = "update-consensus-decode-trait-bound" }

[dev-dependencies]
proptest = "1"
