[workspace]
members = ["crates/*"]
# Nym uses a separate lock domain because its sqlite dependency cannot resolve
# alongside Arti's. The plugin is separate for the same reason.
exclude = ["crates/transport-nym", "plugins/ptj-transport-nym"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "concurrent-psbt"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(coverage_nightly)'] }
