[package]
name = "lattice-psbt-afl"
version = "0.0.0"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzer_verify_crash)'] }

[dependencies]
afl = "0.15"
arbitrary = { version = "1", features = ["derive"] }
lattice-psbt = { path = "..", features = ["_internal"] }
bitcoin = "0.32.2"
psbt-v2 = "0.3.0"

[workspace]
members = ["."]

[[bin]]
name = "afl_crash_test"
path = "src/bin/afl_crash_test.rs"

[[bin]]
name = "afl_join_inputs"
path = "src/bin/afl_join_inputs.rs"

[[bin]]
name = "afl_join_outputs"
path = "src/bin/afl_join_outputs.rs"
