# concurrent-psbt-wasm
#
# WASM-facing wrapper that exposes concurrent-psbt's PSBT operations to JS via
# `#[wasm_bindgen]`, so the shared frontend (contrib/demo-gui) can drive them
# with NO server — the PWA no-backend core. Every exported op mirrors one ptj
# webgui `/api/*` route (create/join/sort/inspect/make-unordered/atomize/
# concatenate/export-bip174/import-bip174/pay/confirm/payments) over base64
# PSBT strings and JSON DTOs, so the same TS backend module can target either.
#
# The workspace root Cargo.toml globs crates/*, so no members edit is needed.
# The #[wasm_bindgen] surface only does real work on the wasm target with the
# PWA toolchain (wasm-pack / wasm-bindgen-cli + the wasm32 target from
# nix/toolchain.nix); the dedicated PWA build (build-wasm.sh) produces the
# browser module. Host `cargo test` covers the pure op/DTO logic off-target.

[package]
name = "concurrent-psbt-wasm"
version.workspace = true
edition = "2024"

# cdylib: required for wasm-bindgen to emit the .wasm module + JS glue.
# rlib: lets native unit tests link the crate (the DTO/serde logic is testable
#       off-target; the #[wasm_bindgen] surface is exercised via wasm-bindgen-test).
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# console_error_panic_hook wires Rust panics to the browser console. Opt-in so
# the default artifact stays lean; the PWA build turns it on in debug.
debug-panic-hook = ["dep:console_error_panic_hook"]

[dependencies]
concurrent-psbt = { path = "../concurrent-psbt" }
# base64 + BIP-370/BIP-174 (de)serialize. `base64` feature matches ptj's io.rs.
psbt-v2 = { version = "0.3.0", features = ["base64"] }
bitcoin = "0.32"
# Deterministic AEAD for the negotiation band (pay/confirm --encrypt). Pure
# Rust, wasm-clean; same crate + version ptj uses. bitcoin::hashes provides the
# tagged-hash key/nonce derivation. default-features = false drops the crate's
# `getrandom` feature (rand_core 0.6 -> getrandom 0.2, which fails on
# wasm32-unknown-unknown without its own `js` feature) — we derive nonces
# deterministically and never use AeadCore::generate_nonce. `alloc` keeps the
# Vec-returning Aead::encrypt/decrypt.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
# Same serde_json the webgui handlers use to shape inspect/DTO JSON.
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# rand is pulled transitively via concurrent-psbt (UniqueId::generate uses
# rand::random). We depend on it directly ONLY to pin the wasm getrandom
# backend below; concurrent-psbt itself does no other randomness.
rand = "0.9"

# EXACT pin: the wasm-bindgen bindgen format must match the wasm-bindgen-cli
# in nix/devshell.nix (0.2.121) or wasm-bindgen/wasm-pack refuses the module.
wasm-bindgen = "=0.2.121"
# serde-wasm-bindgen converts serde types <-> JsValue without a JSON string
# hop; used for the structured DTO in/out.
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# --- wasm getrandom backend (Feasibility requiredChanges) ---
# rand 0.9 -> rand_core 0.9 -> getrandom 0.3. On wasm32 the RNG has no OS
# entropy source unless we select the JS backend, which routes to the browser's
# crypto.getRandomValues via wasm-bindgen. concurrent-psbt's ONLY runtime
# randomness is the 16-byte UniqueId in src/psbt/output.rs; without this the
# create/atomize/sort UID paths panic in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# Native off-target tests for the pure DTO/serde helpers + ops logic reuse the
# `serde_json`/`serde` already in [dependencies]; no extra [dev-dependencies]
# are needed for the host `cargo test` path.

# Browser boundary tests (tests/wasm.rs); wasm-only.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[lints]
workspace = true
