# ptj-e2e-peer — the RUST counterparty binary for the browser<->rust WebRTC e2e
# test. It is a TEST-HARNESS bin, NOT part of the default ptj build. All
# ungrounded network deps (str0m, ohttp, rust-payjoin) are reached ONLY through
# the sibling transport crates' own deferred features, never depended on
# directly here — mirroring the deferred-dep contract of transport-arti.
#
# The whole bin is gated behind `e2e-peer` via `[[bin]] required-features`, so it
# is ABSENT from the default target set: the default `cargo build`,
# `cargo clippy --all-targets`, and the mainline flake `frontier` never pull the
# ungrounded deps. Only the Stage-2 `webrtc-e2e-live` check (in the NEW `frontier`
# aggregate, off quick/lint/nightly) builds it with `--features e2e-peer`.

[package]
name = "ptj-e2e-peer"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "ptj-e2e-peer"
path = "src/main.rs"
# Drop the bin from the default target set entirely until `e2e-peer` is on. With
# the feature off, `cargo build`/`cargo build --all-targets` skip this bin, so no
# ungrounded dep is ever pulled on the mainline. (Contrast the transport crates,
# which keep a compiling *skeleton*; a bin that USES those crates' feature-on
# backends has nothing to skeletonize, so required-features is the right gate.)
required-features = ["e2e-peer"]

[features]
# Default OFF and, because the [[bin]] below sets `required-features`, the binary
# is simply NOT BUILT in the default target set (rather than compiled as a
# skeleton). This is the stronger of the two gating options: `clippy --all-targets`
# on the default build never even sees the bin's ungrounded dep graph. Turning
# `e2e-peer` on enables the sibling transports' real backends.
default = []
# NOTE: transport-str0m/str0m is GROUNDED (compiles feature-on);
# transport-payjoin-dir/payjoin-dir is still deferred (its network deps are
# un-wired — see that crate's TODO(ground-deps)), so `--features e2e-peer`
# does not build yet. The bin below is required-features-gated, so nothing on
# the default target set ever reaches this.
e2e-peer = ["transport-str0m/str0m", "transport-payjoin-dir/payjoin-dir"]

[dependencies]

# The PSBT type + the EXISTING join engine, reused verbatim (no reimplementation).
psbt-v2 = { version = "0.3.0", features = ["base64"] }
# The frozen seam + the two sibling transports. The sibling crates compile as
# network-free skeletons by default; this bin only ever builds them feature-ON
# (via `e2e-peer`), so it is never part of a default build.
transport-core = { path = "../transport-core" }
# The signaling-ohttp component ships as crate `transport-payjoin-dir`.
transport-payjoin-dir = { path = "../transport-payjoin-dir" }
transport-str0m = { path = "../transport-str0m" }
# ptj exposes its lib target (join_psbts + io encode/parse) so this bin shares the
# CLI's exact convergence. TODO(share-join): if ptj has no lib target yet, add a
# thin `[lib]` re-exporting `commands::join::join_psbts` + `io::{encode_psbt,
# parse_psbt_bytes}`, or factor them into a shared `ptj-core` crate. Until then
# the `ptj_join` module in main.rs documents this dependency edge.
# ptj = { path = "../ptj", default-features = false }

[lints]
workspace = true
