[package]
name = "ptj"
version.workspace = true
edition = "2024"

[[bin]]
name = "ptj"
path = "src/main.rs"

# A minimal in-memory plugin speaking the full transport-plugin protocol over
# stdio. TEST INFRASTRUCTURE for tests/plugin_host.rs (which locates it via
# CARGO_BIN_EXE_ptj-fake-plugin): the host's spawn/handshake/publish/collect
# paths are exercised end to end over real child pipes with no network. Also
# handy as the reference implementation for plugin authors.
[[bin]]
name = "ptj-fake-plugin"
path = "src/bin/fake_plugin.rs"
required-features = ["plugin-transports"]

[features]
default = ["webgui"]
webgui = []
# WIP: interactive terminal UI (`ptj tui`). NOT in the default set — the TUI
# pulls a terminal stack (ratatui + crossterm) the plain CLI doesn't need.
tui = ["dep:ratatui", "dep:crossterm"]
iroh-sync = ["dep:transport-iroh", "transport-iroh/iroh"]
arti = ["dep:transport-arti", "transport-arti/arti"]
nym = ["dep:transport-nym", "transport-nym/nym"]
emissary = ["dep:transport-emissary", "transport-emissary/emissary"]
mdk = ["dep:transport-mdk", "transport-mdk/mdk"]
# Browser-viable transports (PWA + webgui). Feature names match each crate's
# own gate. The /api/sync handler and the CLI select them through the shared
# `commands::sync::build_transport`. The WebRTC pair (str0m / webrtc-rs) is
# selectable with the MANUAL file-based signaling params (--webrtc-role,
# --signal-out/--signal-in — see `transport::signaling`); the oblivious
# BIP-77/OHTTP signaling path and the payjoin-dir arm's own session params
# arrive with transport-payjoin-dir (owned externally — see
# TODO(transport-payjoin-dir) in commands/sync.rs).
str0m = ["dep:transport-str0m", "transport-str0m/str0m"]
webrtc-rs = ["dep:transport-webrtc-rs", "transport-webrtc-rs/webrtc-rs"]
payjoin-dir = ["dep:transport-payjoin-dir", "transport-payjoin-dir/payjoin-dir"]
# TODO(transport-nostr): unauthored — do NOT add until the crate exists.
# nostr = ["dep:transport-nostr", "transport-nostr/nostr"]
all-transports = ["iroh-sync", "arti", "nym", "emissary", "mdk"]
# Out-of-process transport plugins: `--transport plugin --plugin <binary>`
# spawns a SEPARATE binary (own Cargo.lock — for transport stacks that cannot
# share this workspace's lock, e.g. arti vs nym-sdk on libsqlite3-sys) and
# drives it over child stdio via Cap'n Proto twoparty RPC
# (`transport::plugin`, contract in transport-plugin-api). Pulls the RPC
# stack via transport-plugin-api's re-exports, plus tokio's process/io/sync
# bits and the tokio<->futures compat shims the vat needs.
plugin-transports = [
    "dep:transport-plugin-api",
    "dep:futures",
    "dep:tokio-util",
    "tokio/process",
    "tokio/io-util",
    # io-std is for the ptj-fake-plugin test binary, which serves the plugin
    # side of the protocol over its OWN stdio; the host side only uses child
    # pipes (tokio/process).
    "tokio/io-std",
    "tokio/sync",
]

[dependencies]
# Desugars the async `Transport` impl for `LocalTransport` to boxed futures.
async-trait = "0.1"
bitcoin = "0.32"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
concurrent-psbt = { path = "../concurrent-psbt" }
# Terminal backend + input events for the `tui` feature only (ratatui's
# conventional pairing). Version grounded via `cargo add --dry-run` (2026-07).
crossterm = { version = "0.29.0", optional = true }
# Event-driven `--ongoing` sync: react to source/state file-change events
# instead of a busy poll-sleep loop (a poll-interval fallback is retained).
notify = "8"
psbt-v2 = { version = "0.3.0", features = [
    "base64",
] }
rand = "0.9"
# Terminal UI framework for the `tui` feature only. Version grounded via
# `cargo add --dry-run` (2026-07).
ratatui = { version = "0.30.2", optional = true }
serde_json = "1"
# The single async runtime for the whole sync driver, created only at the `Sync`
# command edge (`commands::sync::drive_async`). `rt` = current-thread runtime;
# `time` = the peer-wait sleep. `main`/non-sync commands stay sync and never
# touch it; no transport crate carries a runtime except iroh's own actor thread.
tokio = { version = "1", features = ["rt", "time"] }
transport-core = { path = "../transport-core" }
transport-iroh = { path = "../transport-iroh", optional = true }
transport-arti = { path = "../transport-arti", optional = true }
transport-nym = { path = "../transport-nym", optional = true }
transport-emissary = { path = "../transport-emissary", optional = true }
transport-mdk = { path = "../transport-mdk", optional = true }
transport-str0m = { path = "../transport-str0m", optional = true }
transport-webrtc-rs = { path = "../transport-webrtc-rs", optional = true }
transport-payjoin-dir = { path = "../transport-payjoin-dir", optional = true }
# The host<->plugin wire contract (schema bindings + re-exported
# capnp/capnp-rpc, so host and plugin binaries share one grounded RPC stack).
# `plugin-transports` only.
transport-plugin-api = { path = "../transport-plugin-api", optional = true }
# futures::io::{BufReader, BufWriter} wrap the child's stdio for the capnp
# twoparty vat (which speaks the futures IO traits). Version grounded via
# `cargo add` (2026-07). `plugin-transports` only.
futures = { version = "0.3.32", optional = true }
# tokio<->futures IO compat: tokio::process pipes -> the futures traits the
# vat consumes. Version grounded via `cargo add` (2026-07). `plugin-transports`
# only.
tokio-util = { version = "0.7.18", features = ["compat"], optional = true }
# TODO(transport-nostr): unauthored — no such crate exists yet.
# transport-nostr = { path = "../transport-nostr", optional = true }

[dev-dependencies]
tempfile = "3"
# The `Transport` trait itself, so the plugin-host integration test
# (tests/plugin_host.rs) can drive `PluginTransport` through the seam.
transport-core = { path = "../transport-core" }

[lints]
workspace = true
