[package]
name = "transport-arti"
version.workspace = true
edition = "2024"

# transport-arti: a Tor onion-service backend, an ANONYMOUS transport. Received
# messages are delivered as BARE opaque bytes (no sender identity) — Tor gives us
# a circuit, not a peer identity, so this crate implements AnonymousChannel only.
#
# Anonymity here is a property of the arti crate (an in-process Tor client), NOT
# of anything this crate does: we just move opaque bytes over a Tor stream. This
# crate reasons about framing and connection lifecycle, never about threat models.
#
# Layer 0 of the DAG (a leaf transport): depends ONLY on transport-core (for the
# frozen channel contract + length-prefixed TLV framing) and its own upstream
# arti SDK. It is never depended on by other transport-<name> crates.
#
# ALL external-network dependency usage sits behind the `arti` cargo feature
# (mirroring how ptj gates `iroh-sync`): with the feature OFF the crate compiles
# as a skeleton whose constructors/methods return a clear "built without the
# 'arti' feature" error, so the workspace builds without pulling the arti SDK.

[features]
# Off by default: the stock build is a network-free skeleton. Turning on `arti`
# pulls the in-process Tor client (arti-client) and its async runtime shim
# (tor-rtcompat) plus tokio, and lights up the real send/recv over a Tor stream.
default = []
arti = [
    "dep:arti-client",
    "dep:tor-rtcompat",
    "dep:tor-hsservice",
    "dep:tor-proto",
    "dep:tor-cell",
    "dep:tokio",
    "dep:futures",
    "dep:safelog",
]

[dependencies]
transport-core = { path = "../transport-core" }
# Desugars the async `AnonymousChannel` impl to boxed futures so the seam stays
# dyn-compatible. A proc-macro only — no runtime, no network SDK.
async-trait = "0.1"

# External-network stack — optional, gated behind `arti`. The arti workspace
# releases its crates in lockstep: arti-client 0.44 resolves the whole tor-*
# family at 0.44.0. `onion-service-service` runs our onion service;
# `onion-service-client` lets `connect` dial peer `.onion` addresses (and turns
# the `allow_onion_addrs` config default to true). The tor-* companions are only
# the ones the backend names directly (hs request types, incoming-stream enum,
# CONNECTED/END cells, the runtime shim). `safelog` is arti's redaction layer:
# rendering an `HsId` as a string requires its `DisplayRedacted` trait in scope.
# `static-sqlite` compiles sqlite from source (`rusqlite/bundled`) so linking
# does not need a system libsqlite3 — the hermetic devshell has none.
arti-client = { version = "0.44", features = ["onion-service-service", "onion-service-client", "static-sqlite"], optional = true }
tor-rtcompat = { version = "0.44", optional = true }
tor-hsservice = { version = "0.44", optional = true }
tor-proto = { version = "0.44", optional = true }
tor-cell = { version = "0.44", optional = true }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"], optional = true }
futures = { version = "0.3", optional = true }
safelog = { version = "0.9", optional = true }

[dev-dependencies]
# `futures::executor::block_on` drives the async skeleton test (which has no
# tokio) to completion. Dev-only, runtime-free.
futures = "0.3"

[lints]
workspace = true
