[package]
name = "transport-arti"
version.workspace = true
edition = "2024"

[dependencies]
transport-core = { path = "../transport-core" }
async-trait = "0.1"
futures = "0.3"
arti-client = { version = "0.44", features = ["onion-service-service", "onion-service-client", "static-sqlite"] }
tor-rtcompat = "0.44"
tor-hsservice = "0.44"
tor-proto = "0.44"
tor-cell = "0.44"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
safelog = "0.9"

[lints]
workspace = true
