[package]
name = "transport-emissary"
version.workspace = true
edition = "2024"

[dependencies]
transport-core = { path = "../transport-core" }
async-trait = "0.1"
emissary-core = "0.4"
emissary-util = "0.4"
yosemite = "0.7"
rand = "0.10"
tokio = { version = "1", features = ["rt", "sync", "time", "io-util"] }

[lints]
workspace = true
