[package]
name = "transport-iroh"
version.workspace = true
edition = "2024"

[dependencies]
transport-core = { path = "../transport-core" }
async-trait = "0.1"
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-blobs = { version = "0.103", default-features = false }
iroh-docs = { version = "0.101.0", default-features = false }
iroh-gossip = { version = "0.101.0", default-features = false, features = ["net"] }
n0-future = "0.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
